acrescentou margem no modo escuro do container

--- a/CSS/stylenot.css
+++ b/CSS/stylenot.css
@@ -407,7 +407,7 @@ body.dark .container {
     color: #ffffff;
     border-radius: 10px;
     padding: 10px;
-    margin: 30px;
+   margin: 30px auto;
 }
 
 body.dark .card {
